--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import { Icon } from "astro-icon/components";
 ---
 
 <section
-  class="footer-section font-Roboto w-auto bg-primaryColor h-auto py-20 lg:mt-12 sm:mt-10 mt-96 px-4" data-aos="fade-left"
+  class="footer-section font-Roboto w-auto bg-primaryColor h-auto lg:py-20 lg:mt-12 sm:mt-10 mt-10 px-4" 
 >
   <div class="container mx-auto">
     <div class="grid md:grid-cols-6 grid-cols-1 mb-10">
