--- a/src/components/Slider/style.css
+++ b/src/components/Slider/style.css
@@ -1,31 +1,5 @@
-#app { height: 100% }
 
-
-
-
-
-
-.swiper {
-  width: 500px;
-  min-height: 100%;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.swiper-slide {
-  display: flex;
-  align-items: center;
-  justify-content: center;
- 
-}
-
-@media only screen and (max-width: 600px) {
-    .swiper {
-      width: 200px;
-      height: 100%;
-    }
-  }
-
-
-
-
-
-
