--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,12 @@ const { title } = Astro.props;
 <style is:global>
   @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap");
 
+  *{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
   /* @import url('https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&family=Roboto+Slab:wght@100..900&display=swap'); */
 
   :root {
@@ -98,7 +104,7 @@ const { title } = Astro.props;
     background-size: center;
     height: 100%;
     width: 100%;
-    overflow-x: hidden;
+   
   }
 
   .home-section {
