--- a/src/components/BlogLayout/BlogDetails.astro
+++ b/src/components/BlogLayout/BlogDetails.astro
@@ -3,12 +3,15 @@ const { detailsData, blogData } = Astro.props;
 import { PortableText } from "astro-portabletext";
 import PortableTextImage from "./PortableTextImage.astro";
 import { Link } from "astro-link";
-
+import { Icon } from "astro-icon/components";
 const components = {
   type: {
     image: PortableTextImage
   }
 }
+
+const props = Astro.props
+
 
 const getRandomPosts = (allPosts, currentPostSlug, count = 3) => {
   const otherPosts = allPosts.filter(post => post.slug?.current !== currentPostSlug);
@@ -74,7 +77,7 @@ const randomRelatedPosts = getRandomPosts(blogData, detailsData.slug?.current);
                   </div>
 
                   <div class="flex items-center gap-2 text-sm text-gray-400 pt-2">
-                    {/* <Clock size={14} /> */}
+                    <Icon name="mdi:clock" />
                     <span>2 min read</span>
                     <span class="inline-flex items-center text-indigo-400 group-hover:translate-x-1 transition-transform duration-300">
                       Read more →
