--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import Sidebar from "../components/Sidebar.astro";
-import Footer from "../components/Footer.astro";
+import Footer from "../components/Footer";
 
 interface Props {
   title: string;
@@ -15,17 +15,18 @@ const { title } = Astro.props;
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-
+    
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
 
   <body>
+    
     <Sidebar />
 
     <slot />
-    <Footer />
+    <Footer client:load/>
     <div class="cursor"></div>
     <div class="cursor2"></div>
 
@@ -154,6 +155,10 @@ const { title } = Astro.props;
     line-height: 24px;
     padding: 5px 0px;
   }
+
+  .blog-details-content p:nth-of-type(7) {
+    background-color: #ced6de;
+}
 
  
   @media only screen and (max-width: 768px) {
