--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -18,5 +18,5 @@ import Layout from "../../layouts/Layout.astro";
 ---
 
 <Layout title="Blogs">
-  <Blogs client:load blogData={blogData} />
+  <Blogs blogData={blogData} />
 </Layout>
